--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@prisma/client": "^5.10.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.22.2",
     "@trpc/client": "^11.0.0-next-beta.289",
     "@trpc/next": "^11.0.0-next-beta.289",
     "@trpc/react-query": "^11.0.0-next-beta.289",
     "@trpc/server": "^11.0.0-next-beta.289",
+    "@uploadthing/react": "^6.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -26,9 +29,12 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.4.0",
+    "react-pdf": "^7.7.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
