--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@prisma/client": "^5.10.1",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,13 +31,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.50.1",
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^7.7.1",
     "react-resize-detector": "^10.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.4.1",
-    "zod": "^3.22.4"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20",
