--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@prisma/client": "^5.10.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -35,6 +36,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^7.7.1",
     "react-resize-detector": "^10.0.1",
+    "simplebar-react": "^3.2.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.4.1",
