--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "langchain": "^0.1.23",
     "lucide-react": "^0.334.0",
     "next": "14.1.0",
+    "openai": "^4.28.4",
     "pdf-parse": "^1.1.1",
     "pinecone-client": "^2.0.0",
     "react": "^18",
