--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^5.22.2",
-    "@trpc/client": "^11.0.0-next-beta.289",
-    "@trpc/next": "^11.0.0-next-beta.289",
-    "@trpc/react-query": "^11.0.0-next-beta.289",
-    "@trpc/server": "^11.0.0-next-beta.289",
+    "@tanstack/react-query": "^4.35.3",
+    "@trpc/client": "^10.38.4",
+    "@trpc/next": "^10.38.4",
+    "@trpc/react-query": "^10.38.4",
+    "@trpc/server": "^10.38.4",
     "@uploadthing/react": "^6.2.4",
     "ai": "^2.2.37",
     "class-variance-authority": "^0.7.0",
