--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@kinde-oss/kinde-auth-nextjs": "^2.1.15",
+    "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@langchain/openai": "^0.0.15",
     "@langchain/pinecone": "^0.0.3",
     "@mantine/hooks": "^7.6.1",
     "@pinecone-database/pinecone": "^2.0.1",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
@@ -55,5 +56,21 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.4.1",
     "zod": "^3.21.4"
-  }
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prisma": "^5.10.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "author": "Julio Condor",
+  "license": "ISC"
 }
